--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "sumfacts-client",
+  "author": { "name": "Finn Fitzsimons", "email": "fitzsimons.finn@gmail.com", "url": "https://github.com/finnfiddle" },
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@react-hook/throttle": "^2.2.0",
@@ -71,9 +72,6 @@
     ],
     "rules": {
       "react-hooks/exhaustive-deps": 1
-    },
-    "globals": {
-      "Ipfs": true
     }
   },
   "browserslist": {
