--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "sumfacts-client",
-  "author": { "name": "Finn Fitzsimons", "email": "fitzsimons.finn@gmail.com", "url": "https://github.com/finnfiddle" },
+  "author": {
+    "name": "Finn Fitzsimons",
+    "email": "fitzsimons.finn@gmail.com",
+    "url": "https://github.com/finnfiddle"
+  },
   "version": "1.0.0",
   "private": false,
   "dependencies": {
