--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ajv": "^8.6.2",
     "antd": "^4.15.6",
     "babel-preset-stage-0": "^6.24.1",
+    "core-js": "^3.15.2",
     "dom-to-image": "^2.6.0",
     "ipfs-core": "^0.8.0",
     "js-file-download": "^0.4.12",
